--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -75,7 +75,7 @@ body {
   }
 
   p {
-    img {
+    img:not(.wp-more-tag) {
       display: inline-block;
       vertical-align: middle;
       height: 1em;
