Update admin input background color

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -188,7 +188,7 @@ body[class*="page_fictioneer"] {
   --checkbox-toggle-background-color-active: #646970;
   --checkbox-toggle-color-active: #fff;
 
-  --input-background-color: #e9ecec;
+  --input-background-color: #eaeaeb;
   --input-checkbox-background-color-checked: #2271b1;
   --input-color-placeholder: #646970;
   --input-color-disabled: #858a93;
