Move custom background to body
This crap caused some real render issues, holy f*ck!

--- a/src/scss/_minimal.scss
+++ b/src/scss/_minimal.scss
@@ -13,6 +13,10 @@
     --embed-box-shadow: var(--minimal-container-box-shadow);
   }
 
+  .custom-background {
+    background-image: none;
+  }
+
   &[data-mode=light] body {
     --infobox-gradient: hsl(var(--infobox-background-free) / 3%);
   }
