--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -233,6 +233,7 @@
   --embed-box-shadow: 0 0 2px rgb(0 0 0 / 30%);
 
   // === MOBILE MENU ===========================================================
+  --mobile-menu-background: var(--e-body);
   --mobile-menu-site-box-shadow: 0 0 4px rgb(0 0 0 / 30%);
   --mobile-menu-overlay: rgb(0 0 0 / 20%);
   --mobile-menu-text-shadow: var(--text-shadow);
