Improve paragraph tools CSS selectors

--- a/src/scss/_paragraph-tools.scss
+++ b/src/scss/_paragraph-tools.scss
@@ -39,15 +39,25 @@
     top: 0;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
     justify-content: space-between;
     gap: 3px;
     padding: 4px 0;
-    min-height: 32px;
     width: 100%;
     opacity: 0;
     transform: translateY(-100%);
     transition: opacity var(--transition-duration);
+
+    &-field {
+      flex: 1 1 auto;
+      border-radius: var(--layout-border-radius-small);
+      height: 20px;
+      max-width: 20px;
+      transition: filter var(--transition-duration);
+
+      &:hover {
+        filter: brightness(1.1);
+      }
+    }
 
     &-field[data-color=default] {
       background: var(--bookmark-line);
@@ -63,18 +73,6 @@
 
     &-field[data-color=delta] {
       background: var(--bookmark-color-delta);
-    }
-
-    > div {
-      flex: 1 1 auto;
-      border-radius: var(--layout-border-radius-small);
-      height: 20px;
-      max-width: 20px;
-      transition: filter var(--transition-duration);
-
-      &:hover {
-        filter: brightness(1.1);
-      }
     }
   }
 }
