Improve follow notification CSS selectors

--- a/src/scss/_follows.scss
+++ b/src/scss/_follows.scss
@@ -55,7 +55,7 @@
   grid-template-rows: auto auto;
 }
 
-.follow-title a {
+.follow-title-link {
   grid-area: 1 / 1 / 2 / 2;
   font-weight: var(--font-weight-medium);
 
@@ -131,7 +131,7 @@
     font-family: var(--ff-note);
   }
 
-  .follow-title a {
+  .follow-title-link {
     color: var(--follow-title-color);
   }
 
