--- a/src/scss/_recommendation.scss
+++ b/src/scss/_recommendation.scss
@@ -41,22 +41,17 @@
       margin-bottom: .5rem;
     }
 
-    > div {
-      display: flex;
-      align-items: center;
-    }
-
     :is(i, .icon) {
       color: var(--fg-600);
       margin-right: .5rem;
     }
+  }
 
-    li {
-      line-height: 1.3;
+  &__list-item {
+    line-height: 1.3;
 
-      &:not(:last-child) {
-        margin-bottom: .5rem;
-      }
+    &:not(:last-child) {
+      margin-bottom: .5rem;
     }
   }
 
