--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -538,14 +538,6 @@ html:not(.logged-in) body:not(.logged-in) {
     }
   }
 
-  a {
-    color: var(--story-link);
-
-    &:hover {
-      color: var(--story-link-hover);
-    }
-  }
-
   &__name {
     display: flex;
     align-items: flex-start;
@@ -603,10 +595,15 @@ html:not(.logged-in) body:not(.logged-in) {
       &-link {
         --focus-offset: 1px;
         grid-area: 1 / 2 / 2 / 3;
+        color: var(--story-link);
         font-size: get_clamp(13, 14, 320, 768);
         line-height: 1.3;
         font-weight: var(--font-weight-medium);
         width: fit-content;
+
+        &:hover {
+          color: var(--story-link-hover);
+        }
       }
 
       &-subrow {
@@ -614,7 +611,7 @@ html:not(.logged-in) body:not(.logged-in) {
         color: var(--fg-700);
         font: var(--font-weight-normal) var(--fs-xxs)/1.2 var(--ff-note);
 
-        > *:not(:last-child)::after {
+        > :is(span, time):not(:last-child)::after {
           content: " •";
           color: var(--fg-800);
           font-family: var(--ff-base);
