Improve card-unavailable filter

--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -147,6 +147,7 @@
   --tax-cloud-current: var(--primary-500);
   --checkmark-not-checked: var(--e-body);
   --card-type-font-weight: 600;
+  --card-unavailable-filter: grayscale(0.5);
   --spoiler-background: var(--fg-600);
   --spoiler-text-visible: #060606;
   --ins-background: #7ebb4e;
