--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -36,7 +36,7 @@
   contain: style layout; // Improve performance
 
   &._story-unpublished {
-    filter: grayscale(1);
+    filter: var(--card-unavailable-filter);
 
     :is(.card__title, .cell-desc, .cell-list, .cell-img) {
       user-select: none;
@@ -70,7 +70,6 @@
       line-height: 1;
       text-transform: uppercase;
       font-weight: var(--font-weight-heading);
-      // padding-right: 1rem;
       filter: drop-shadow(0 0 8px var(--e-2)) drop-shadow(0 0 6px var(--e-2)) drop-shadow(0 0 2px var(--e-2));
     }
   }
