--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -87,6 +87,7 @@
   --litrpg-fg: var(--fg-500);
   --litrpg-ins: #16c79a;
   --litrpg-del: #be123c;
+  --card-unavailable-filter: grayscale(0.75) brightness(0.85);
 
   // === FOCUS =================================================================
   --focus-box-shadow: inset 0 0 0px 3px rgb(255 255 255 / 75%);
