--- a/src/scss/_post.scss
+++ b/src/scss/_post.scss
@@ -40,6 +40,11 @@
     margin-bottom: 0; // Override if inside content-section
   }
 
+  &__title .sticky-pin {
+    font-size: 0.85em;
+    margin-right: 0.125em;
+  }
+
   &__meta {
     display: flex;
     gap: .5rem 1.5rem;
